--- a/index style.css
+++ b/index style.css
@@ -102,21 +102,33 @@
         font-size: 17px;
       }
       
-      
       .links-menu ul li ul > li {
         list-style-type: none;
         display: block;
         text-align: left;
-        margin-top: 12px;
-        
-
+        margin-top: 10px;
       }
+
       .links-menu ul li ul > li:hover{
         background-color: #113575;
+
       }
       .links-menu ul li ul  li:hover a{
         background-color: #113575;
       } 
+      
+      .menu .border-Quesst{
+        border-bottom: 1px solid white;
+        margin: 0;
+      }
+      /* Css properties links-menu ul :Missions [END]*/
+      
+      /* Css properties links-menu ul :NASA Audiences [START] */
+      .menu .border-Fore{
+        border-bottom: 1px solid white; 
+        margin: 0;
+      }
+      /* Css properties links-menu ul :NASA Audiences [END] */
       
       
       /* Css properties links-menu ul :Missions [END]*/
